--- a/intro.ipynb
+++ b/intro.ipynb
@@ -6,7 +6,8 @@
       "name": "intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM5pkKDbHO+5kKTxTqNkduz",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNU6ypJLhdflLVUIKeuxV0E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,12 +45,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JoUrdFKbaokU",
-        "outputId": "693ed27d-9a1d-4ba7-877d-9ffb1860e628"
+        "outputId": "7f7f820f-d09c-40d9-97dc-425c48905b8c"
       },
       "source": [
         "print(\"Hello World\")"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +84,7 @@
         "import numpy as np\n",
         "np.__version__"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,6 +101,38 @@
           },
           "execution_count": 6
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FwmUOEXUf84m"
+      },
+      "source": [
+        "### Useful links"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Btr8dYbLgAfP"
+      },
+      "source": [
+        "* [Markdown Guide](https://colab.research.google.com/notebooks/markdown_guide.ipynb)\n",
+        "* [What is Colab](https://colab.research.google.com/notebooks/intro.ipynb#scrollTo=-Rh3-Vt9Nev9)\n",
+        "* [Google my drive](https://drive.google.com/drive/u/0/my-drive)\n",
+        "* [Colab into private repo](https://sadiaafrinpurba.github.io/2020/08/31/how-to-clone-github-private-repositories-from-google-colab-using-ssh/)\n",
+        "* []()\n",
+        "* []()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YuLAhFa4gF1u"
+      },
+      "source": [
+        ""
       ]
     }
   ]
