--- a/intro.ipynb
+++ b/intro.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNU6ypJLhdflLVUIKeuxV0E",
+      "authorship_tag": "ABX9TyM7xM4gAyutXDfAk4DhuLH9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,41 +67,21 @@
         "id": "srcuhvXrawi8"
       },
       "source": [
-        "### Import Numpy, display version"
+        "### Import Numpy, display version, seek help for rand method"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "cfGVigNddA46",
-        "outputId": "46a32c6a-4458-4213-da22-0923af300d65"
+        "id": "cfGVigNddA46"
       },
       "source": [
         "import numpy as np\n",
-        "np.__version__"
+        "np.__version__\n",
+        "np.random.rand?\n"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'1.19.5'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -122,7 +102,7 @@
         "* [What is Colab](https://colab.research.google.com/notebooks/intro.ipynb#scrollTo=-Rh3-Vt9Nev9)\n",
         "* [Google my drive](https://drive.google.com/drive/u/0/my-drive)\n",
         "* [Colab into private repo](https://sadiaafrinpurba.github.io/2020/08/31/how-to-clone-github-private-repositories-from-google-colab-using-ssh/)\n",
-        "* []()\n",
+        "* ![Python](https://air-marketing-assets.imgix.net/blog/logo-db/python-Logo.png?auto=format&fit=max&ixlib=react-9.0.2&h=270&w=576)\n",
         "* []()"
       ]
     },
@@ -132,8 +112,134 @@
         "id": "YuLAhFa4gF1u"
       },
       "source": [
-        ""
+        "### Import a package that doesn't exist, then install it and import it"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cyDohZxXh3nd",
+        "outputId": "1283b5e6-b9c7-4a37-b4df-28e18516ce98",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 299
+        }
+      },
+      "source": [
+        "import imageai"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-2cf5b4bddf56>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mimageai\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'imageai'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wyJKfjH4h73t",
+        "outputId": "7218642f-e2d1-40d7-a248-a3b1f6650a64",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 870
+        }
+      },
+      "source": [
+        "!pip install imageai"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting imageai\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/73/44/3d5d8ef572888025666eec284e85f9243faf06ca8c12085dcff1ca9754ed/imageai-2.1.6-py3-none-any.whl (160kB)\n",
+            "\r\u001b[K     |██                              | 10kB 8.6MB/s eta 0:00:01\r\u001b[K     |████                            | 20kB 13.5MB/s eta 0:00:01\r\u001b[K     |██████                          | 30kB 17.7MB/s eta 0:00:01\r\u001b[K     |████████▏                       | 40kB 20.9MB/s eta 0:00:01\r\u001b[K     |██████████▏                     | 51kB 23.6MB/s eta 0:00:01\r\u001b[K     |████████████▏                   | 61kB 20.5MB/s eta 0:00:01\r\u001b[K     |██████████████▎                 | 71kB 18.8MB/s eta 0:00:01\r\u001b[K     |████████████████▎               | 81kB 15.4MB/s eta 0:00:01\r\u001b[K     |██████████████████▎             | 92kB 16.6MB/s eta 0:00:01\r\u001b[K     |████████████████████▍           | 102kB 16.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████▍         | 112kB 16.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████▍       | 122kB 16.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▌     | 133kB 16.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▌   | 143kB 16.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▌ | 153kB 16.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 163kB 16.3MB/s \n",
+            "\u001b[?25hCollecting keras-resnet==0.2.0\n",
+            "  Downloading https://files.pythonhosted.org/packages/76/d4/a35cbd07381139dda4db42c81b88c59254faac026109022727b45b31bcad/keras-resnet-0.2.0.tar.gz\n",
+            "Collecting pillow==7.0.0\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f5/79/b2d5695d1a931474fa68b68ec93bdf08ba9acbc4d6b3b628eb6aac81d11c/Pillow-7.0.0-cp37-cp37m-manylinux1_x86_64.whl (2.1MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.1MB 41.4MB/s \n",
+            "\u001b[?25hRequirement already satisfied: keras==2.4.3 in /usr/local/lib/python3.7/dist-packages (from imageai) (2.4.3)\n",
+            "Collecting matplotlib==3.3.2\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/87/a6/8d7d06f6b69236a3c1818157875ceb1259ba0d9df4194f4fe138ffdc0f41/matplotlib-3.3.2-cp37-cp37m-manylinux1_x86_64.whl (11.6MB)\n",
+            "\u001b[K     |████████████████████████████████| 11.6MB 20.5MB/s \n",
+            "\u001b[?25hCollecting numpy==1.19.3\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/65/b3/07864c89acb2a86df6f2e8c9bf091ec5916da58dd3ce3a633a51a02c115e/numpy-1.19.3-cp37-cp37m-manylinux2010_x86_64.whl (14.9MB)\n",
+            "\u001b[K     |████████████████████████████████| 14.9MB 278kB/s \n",
+            "\u001b[?25hRequirement already satisfied: scipy==1.4.1 in /usr/local/lib/python3.7/dist-packages (from imageai) (1.4.1)\n",
+            "Requirement already satisfied: opencv-python in /usr/local/lib/python3.7/dist-packages (from imageai) (4.1.2.30)\n",
+            "Requirement already satisfied: h5py==2.10.0 in /usr/local/lib/python3.7/dist-packages (from imageai) (2.10.0)\n",
+            "Requirement already satisfied: pyyaml in /usr/local/lib/python3.7/dist-packages (from keras==2.4.3->imageai) (3.13)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (1.3.1)\n",
+            "Requirement already satisfied: certifi>=2020.06.20 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (2020.12.5)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (2.8.1)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (2.4.7)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (0.10.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from h5py==2.10.0->imageai) (1.15.0)\n",
+            "Building wheels for collected packages: keras-resnet\n",
+            "  Building wheel for keras-resnet (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for keras-resnet: filename=keras_resnet-0.2.0-py2.py3-none-any.whl size=20486 sha256=e4d683f9e7b2cd805fd56334ff9a24bfc5198763e314d7814181131a8485ea73\n",
+            "  Stored in directory: /root/.cache/pip/wheels/5f/09/a5/497a30fd9ad9964e98a1254d1e164bcd1b8a5eda36197ecb3c\n",
+            "Successfully built keras-resnet\n",
+            "\u001b[31mERROR: datascience 0.10.6 has requirement folium==0.2.1, but you'll have folium 0.8.3 which is incompatible.\u001b[0m\n",
+            "\u001b[31mERROR: bokeh 2.3.1 has requirement pillow>=7.1.0, but you'll have pillow 7.0.0 which is incompatible.\u001b[0m\n",
+            "\u001b[31mERROR: albumentations 0.1.12 has requirement imgaug<0.2.7,>=0.2.5, but you'll have imgaug 0.2.9 which is incompatible.\u001b[0m\n",
+            "Installing collected packages: keras-resnet, pillow, numpy, matplotlib, imageai\n",
+            "  Found existing installation: Pillow 7.1.2\n",
+            "    Uninstalling Pillow-7.1.2:\n",
+            "      Successfully uninstalled Pillow-7.1.2\n",
+            "  Found existing installation: numpy 1.19.5\n",
+            "    Uninstalling numpy-1.19.5:\n",
+            "      Successfully uninstalled numpy-1.19.5\n",
+            "  Found existing installation: matplotlib 3.2.2\n",
+            "    Uninstalling matplotlib-3.2.2:\n",
+            "      Successfully uninstalled matplotlib-3.2.2\n",
+            "Successfully installed imageai-2.1.6 keras-resnet-0.2.0 matplotlib-3.3.2 numpy-1.19.3 pillow-7.0.0\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "PIL",
+                  "matplotlib",
+                  "mpl_toolkits",
+                  "numpy"
+                ]
+              }
+            }
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hyt8Aq1HiLws"
+      },
+      "source": [
+        "import imageai"
+      ],
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
